Added html to about.html

--- a/about.html
+++ b/about.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="style/about.css">
 </head>
 <body>
-    <h1> ABOUT </h1>
+    <header>
+        <section id="header-box">
+            <div id="about">
+                <h1> ABOUT </h1>
+            </div>
+            <div id="nav-bar">
+                <nav>
+                <a id="home" href="index.html">Home</a>
+                <a id="about" href="about.html">About</a>
+                <a id="contact" href="contact.html">Contact</a>
+                <a id="projects" href="projects.html">Projects</a>
+                </nav>
+            </div>
+
+        </section>
+    </header>
+    <section id="about-section">
+        <div>
+            <p>I am 26 years old, and I am looking to start a new profession!</p>
+            <p>My background is entirely in aviation, going all the way back to university</p>
+            <p>I have B.S. in Aeronautical Technology, but I can no longer use it due to the recent downturn</p>
+            <br>
+            <p>I am looking forward to this journey of learning to code!</p>
+            <p>I cannot wait to see where I will land after Lambda!!</p>
+        </div>
+    </section>
 </body>
 </html>
