finished about.html

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
             <div id="about">
                 <h1> ABOUT </h1>
             </div>
-            <div id="nav-bar">
+            <div class="nav-bar">
                 <nav>
                 <a id="home" href="index.html">Home</a>
                 <a id="about" href="about.html">About</a>
@@ -24,13 +24,49 @@
         </section>
     </header>
     <section id="about-section">
-        <div>
+        <div id="about">
             <p>I am 26 years old, and I am looking to start a new profession!</p>
             <p>My background is entirely in aviation, going all the way back to university</p>
             <p>I have B.S. in Aeronautical Technology, but I can no longer use it due to the recent downturn</p>
             <br>
             <p>I am looking forward to this journey of learning to code!</p>
             <p>I cannot wait to see where I will land after Lambda!!</p>
+        </div>
+        <div id="list">
+            <ul>Some of my hobbies include:
+                <li>Gardening</li>
+                <li>Reading</li>
+                <li>Archery</li>
+                <li>And now Lambda!</li>
+            </ul>
+        </div>
+    </section>
+    <section id="photos">
+        <div>
+            <p>aviation theme</p>
+        </div>
+        <div>
+            <p>gardening theme</p>
+        </div>
+        <div>
+            <p>reading theme</p>
+        </div>
+        <div>
+            <p>archery theme</p>
+        </div>
+    </section>
+    <section id="footer-box">
+        <div id="footer-text">
+            <p>Thank you for reading about me!</p>
+            <p>I hope you have a great day!</p>
+        </div>
+        <div class="nav-bar">
+            <nav>
+                <a id="home" href="index.html">Home</a>
+                <a id="about" href="about.html">About</a>
+                <a id="contact" href="contact.html">Contact</a>
+                <a id="projects" href="projects.html">Projects</a>
+                </nav>
         </div>
     </section>
 </body>
