finished contact.html

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,46 @@
     <link rel="stylesheet" href="style/contact.css">
 </head>
 <body>
-    <h1> CONTACT </h1>
+    <section id="header-box">
+        <div id="contact">
+            <h1> CONTACT </h1>
+        </div>
+        <div class="nav-bar">
+            <nav>
+                <a id="home" href="index.html">Home</a>
+                <a id="about" href="about.html">About</a>
+                <a id="contact" href="contact.html">Contact</a>
+                <a id="projects" href="projects.html">Projects</a>
+                </nav>
+        </div>
+    </section>
+    <section id="contact-info">
+        <div id="statement">
+            <p>If you would like to contact me, my Twitter and Linkedin are down below!</p>
+        </div>
+        <div id="twitter">
+            <p>twitter pic</p>
+            <p>twitter handle</p>
+        </div>
+        <div id="linkedin">
+            <p>linkedin pic</p>
+            <p>linkedin handle</p>
+        </div>
+    </section>
+    <section id="footer-box">
+        <div id="footer-text">
+            <p>Thank you for lookin at my portfolio!</p>
+            <p>I hope you have a great day!</p>
+        </div>
+        <div class="nav-bar">
+            <nav>
+                <a id="home" href="index.html">Home</a>
+                <a id="about" href="about.html">About</a>
+                <a id="contact" href="contact.html">Contact</a>
+                <a id="projects" href="projects.html">Projects</a>
+                </nav>
+        </div>
+    </section>
+    
 </body>
 </html>
