finished project.html

--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,50 @@
     <link rel="stylesheet" href="style/projects.css">
 </head>
 <body>
-    <h1> PROJECTS </h1>
+    <section id="header-box">
+        <div id="header">
+            <h1> PROJECTS </h1>
+        </div>
+        <div class="nav-bar">
+            <nav>
+                <a id="home" href="index.html">Home</a>
+                <a id="about" href="about.html">About</a>
+                <a id="contact" href="contact.html">Contact</a>
+                <a id="projects" href="projects.html">Projects</a>
+            </nav>
+        </div>
+    </section>
+    <section id="project-body">
+        <div id="text">
+            <p>Here are my completed projects to date:</p>
+        </div>
+        <div class="projects">
+            <p>img</p>
+            <p>link</p>
+        </div>
+        <div class="projects">
+            <p>img</p>
+            <p>link</p>
+        </div>
+        <div class="projects">
+            <p>img</p>
+            <p>link</p>
+        </div>
+    </section>
+    <section id="footer-box">
+        <div id="footer-text">
+            <p>Thank you for lookin at my portfolio!</p>
+            <p>I hope you have a great day!</p>
+        </div>
+        <div class="nav-bar">
+            <nav>
+                <a id="home" href="index.html">Home</a>
+                <a id="about" href="about.html">About</a>
+                <a id="contact" href="contact.html">Contact</a>
+                <a id="projects" href="projects.html">Projects</a>
+                </nav>
+        </div>
+    </section>
+    
 </body>
 </html>
