--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <section id="header-box">
-            <div id="about">
+            <div id="about-top">
                 <h1> ABOUT </h1>
             </div>
             <div class="nav-bar">
