--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <section id="header-box">
-            <div id="about-top">
-                <h1> ABOUT </h1>
+            <div id="header-about">
+                <p> ABOUT </p>
             </div>
             <div class="nav-bar">
                 <nav>
@@ -24,7 +24,7 @@
         </section>
     </header>
     <section id="about-section">
-        <div id="about">
+        <div id="about-text">
             <p>I am 26 years old, and I am looking to start a new profession!</p>
             <p>My background is entirely in aviation, going all the way back to university</p>
             <p>I have B.S. in Aeronautical Technology, but I can no longer use it due to the recent downturn</p>
@@ -39,20 +39,6 @@
                 <li>Archery</li>
                 <li>And now Lambda!</li>
             </ul>
-        </div>
-    </section>
-    <section id="photos">
-        <div>
-            <p>aviation theme</p>
-        </div>
-        <div>
-            <p>gardening theme</p>
-        </div>
-        <div>
-            <p>reading theme</p>
-        </div>
-        <div>
-            <p>archery theme</p>
         </div>
     </section>
     <section id="footer-box">
