finished contact.css

--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <section id="header-box">
-        <div id="contact">
-            <h1> CONTACT </h1>
+        <div id="contact-header">
+            <p>CONTACT</p>
         </div>
         <div class="nav-bar">
             <nav>
@@ -25,12 +25,13 @@
             <p>If you would like to contact me, my Twitter and Linkedin are down below!</p>
         </div>
         <div id="twitter">
-            <p>twitter pic</p>
-            <p>twitter handle</p>
+            <img id="tweet"src="https://static01.nyt.com/images/2014/08/10/magazine/10wmt/10wmt-superJumbo-v4.jpg?quality=90&auto=webp"/>
+            <p>Twitter Handle:</p>
+            <p>@XV_Rocky_Ro</p>
         </div>
         <div id="linkedin">
-            <p>linkedin pic</p>
-            <p>linkedin handle</p>
+            <img id="link"src="https://icons-for-free.com/iconfiles/png/512/linked+linkedin+logo+social+icon-1320191784782940875.png"/>
+            <p>@Austin Carrill</p>
         </div>
     </section>
     <section id="footer-box">
