finished projects.css

--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 <body>
     <section id="header-box">
         <div id="header">
-            <h1> PROJECTS </h1>
+            <p>PROJECTS </p> 
         </div>
         <div class="nav-bar">
             <nav>
@@ -21,20 +21,16 @@
         </div>
     </section>
     <section id="project-body">
-        <div id="text">
+        <div id="body-text">
             <p>Here are my completed projects to date:</p>
         </div>
         <div class="projects">
-            <p>img</p>
-            <p>link</p>
+            <img class="project1"src="https://www.bakingbusiness.com/ext/resources/2019/8/08192019/GlobalTrends.jpg?1566494557"/>
+                <a class="project1text" href="https://codepen.io/acarrill42/pen/ExKvEGL">HTML Practice</a>
         </div>
         <div class="projects">
-            <p>img</p>
-            <p>link</p>
-        </div>
-        <div class="projects">
-            <p>img</p>
-            <p>link</p>
+            <img class="project1"src="https://static01.nyt.com/images/2018/11/11/travel/11yosemite2/merlin_145320882_abb47a0c-1a15-402a-8d30-9dcb7073e46b-superJumbo.jpg?quality=90&auto=webp"/>
+            <a class="project1text" href="https://codepen.io/acarrill42/pen/bGpvwQX">CSS Practice</a>
         </div>
     </section>
     <section id="footer-box">
